--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
