--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
+    "@yankeeinlondon/code-builder": "^1.2.1",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "gh-pages": "^5.0.0",
@@ -39,6 +40,8 @@
     "prettier": "^2.8.8",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
+    "vite-plugin-dynamic-import": "^1.4.1",
+    "vite-plugin-md": "^0.22.5",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
   }
