--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-highlightjs": "^4.0.1",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
+    "vue3-highlightjs": "^1.0.5",
     "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
