--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-project",
+  "name": "blog",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -20,9 +20,7 @@
     "markdown-it-highlightjs": "^4.0.1",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2",
-    "vue3-highlightjs": "^1.0.5",
-    "vue3-markdown-it": "^1.0.10"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
