--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
     "pinia": "^2.1.3",
+    "sass": "^1.63.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
