--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "vite-plugin-md": "^0.22.5",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
-  }
+  },
+  "homepage": "https://Aierse.github.io/blog"
 }
